# ft_ls

./: .Makefile.swp  .gitignore  CMakeLists.txt  Makefile  ft_ls  test  test.c  testfile
inc/: ft_ls.h  libft.h
printf/: Makefile
src/: comparators.c  date_cmp.c  file_name_cmp.c  ft_ls.c  handle_argv.c  inserts.c  is_visible.c  ls_dir.c  ls_files_r.c  merge_sort.c  parse_flags.c  print_mode.c  printfc.c  sort.c  t_file_new.c  to_list.c
trash/: add_to_lst.c  color.c  dir.c  file_creator.c  files_lst_printer.c  files_rewind.c  flag_handling.c  ft_ls.c  insert_to_lst.c  ls_files.c  ls_files_r.c  lst_handle.c  main.c  print_usage.c  rd_link.c  read_dir.c  recursive_dir_handle.c  sort.c  stat.c  str_er.c  time.c  winsz.c  xattr.c
